--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
       <h1>Welcome to my first website of senior year</h1>
     </div>
   </div>
+  <footer>
+    <p>© This won't move to the bottum so this is here for now</p>
+  </footer>
 </body>
 </html>
