--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="branding">
       <h1>Welcome to my first website of senior year</h1>
     </div>
+    <nav>
   </div>
   <footer>
     <p>© This won't move to the bottum so this is here for now</p>
