its time for changes

--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 <body>
   <div class="container">
     <div class="branding">
-      <h1>Welcome to my first website of senior year</h1>
+      <h1>Vince McMahon</h1>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Vince_McMahon_2.jpg" alt="Vince McMahon" style="width:200px;border-radius:12px;margin:20px 0;box-shadow:0 2px 12px rgba(0,0,0,0.15);">
+      <p style="font-size:1.2rem;max-width:600px;margin:0 auto 24px auto;color:#222;">Vince McMahon is an American businessman, media proprietor, and professional wrestling promoter. He is best known as the former chairman and CEO of WWE, the world's largest professional wrestling company. McMahon revolutionized the wrestling industry, turning WWE into a global entertainment powerhouse.</p>
     </div>
-    <nav>
+    <nav class="menu">
+      <a href="https://en.wikipedia.org/wiki/Vince_McMahon" target="_blank"><button>Learn More</button></a>
+      <a href="https://www.wwe.com/superstars/vincemcmahon" target="_blank"><button>WWE Profile</button></a>
+      <a href="idex.html"><button>Alternate Index</button></a>
+    </nav>
   </div>
   <footer>
-    <p>© This won't move to the bottum so this is here for now</p>
+    <p style="text-align:center;color:#333;">© 2025 Vince McMahon Fan Page</p>
   </footer>
 </body>
 </html>
