--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
   <div class="container">
     <div class="branding">
       <h1>Vince McMahon</h1>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Vince_McMahon_2.jpg" alt="Vince McMahon" style="width:200px;border-radius:12px;margin:20px 0;box-shadow:0 2px 12px rgba(0,0,0,0.15);">
+      <img src="img/vince-mc-mahon-entrance-343531421.gif" alt="Vince McMahon" style="width:200px;border-radius:12px;margin:20px 0;box-shadow:0 2px 12px rgba(0,0,0,0.15);">
       <p style="font-size:1.2rem;max-width:600px;margin:0 auto 24px auto;color:#222;">Vince McMahon is an American businessman, media proprietor, and professional wrestling promoter. He is best known as the former chairman and CEO of WWE, the world's largest professional wrestling company. McMahon revolutionized the wrestling industry, turning WWE into a global entertainment powerhouse.</p>
     </div>
     <nav class="menu">
       <a href="https://en.wikipedia.org/wiki/Vince_McMahon" target="_blank"><button>Learn More</button></a>
       <a href="https://www.wwe.com/superstars/vincemcmahon" target="_blank"><button>WWE Profile</button></a>
-      <a href="idex.html"><button>Alternate Index</button></a>
     </nav>
   </div>
   <footer>
-    <p style="text-align:center;color:#333;">© 2025 Vince McMahon Fan Page</p>
+    <p style="text-align:center;color:#333;">© Luke Petitos First Website Of Senior Year</p>
   </footer>
 </body>
 </html>
