making progress pt 2

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <nav class="menu">
       <a href="https://en.wikipedia.org/wiki/Vince_McMahon" target="_blank"><button>Learn More</button></a>
       <a href="https://www.wwe.com/superstars/vincemcmahon" target="_blank"><button>WWE Profile</button></a>
+      <a href="" target="_blank"><button>Matches</button></a>
+      <a href="" target="_blank"><button>Storylines</button></a>
     </nav>
   </div>
   <footer>
