--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
       <a href="https://en.wikipedia.org/wiki/Vince_McMahon" target="_blank"><button>Learn More</button></a>
       <a href="https://www.wwe.com/superstars/vincemcmahon" target="_blank"><button>WWE Profile</button></a>
       <a href="" target="_blank"><button>Matches</button></a>
-      <a href="" target="_blank"><button>Storylines</button></a>
+      <button id="statistics-btn" style="display:inline-block;">Statistics</button>
       <button id="show-video-btn" style="display:inline-block;">Show Vince Video</button>
     </nav>
+  </div>
+  <!-- Statistics Popup -->
+  <div id="stats-popup" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.6);z-index:1000;justify-content:center;align-items:center;">
+    <div style="background:#fff;padding:24px 18px;border-radius:16px;box-shadow:0 4px 24px rgba(0,0,0,0.18);text-align:center;max-width:90vw;max-height:90vh;">
+      <img src="img/027420f4-05f8-41f7-985c-ae7ca99c2de8.png" alt="Statistics" style="max-width:400px;width:90vw;height:auto;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,0.15);">
+      <br>
+      <button id="close-stats-btn" style="margin-top:18px;padding:10px 24px;border-radius:8px;background:#b80000;color:#fff;border:none;cursor:pointer;">Close</button>
+    </div>
   </div>
   <footer>
     <p style="text-align:center;color:#333;">© Luke Petitos First Website Of Senior Year</p>
@@ -41,25 +49,31 @@
   const vinceImg = document.getElementById('vince-img');
   const vinceAudio = document.getElementById('vince-audio');
   // Duration of the GIF in milliseconds (adjust as needed)
-  const gifDuration = 3000; // 3 seconds, change if your GIF is longer/shorter
+  const gifDuration = 2000; // 3 seconds, change if your GIF is longer/shorter
   // Array of images to cycle through after the GIF
   const images = [
     'img/giphy-1884021005.gif',
     'img/200-2906910793.gif',
     'img/tumblr_p1mmcxlAsK1wo0mn6o1_400-4222318844.gif',
     'img/HFn1mCm-2533967838.gif',
-    'img/icegif-516-105215074.gif'
+    'img/icegif-516-105215074.gif',
+    'img/vince-mc-mahon-entrance-3328459950.gif',
+    'img/vince-mc-mahon-entrance-343531421.gif',
+    'img/200-2900238005.gif',
+    'img/wwe-vince-mcmahon-3911007930.gif',
+    'img/tumblr_ntbumnmnrz1qksk74o3_500-884513421.gif',
+    'img/giphy-1569305551.gif',
+    'img/vince-mcmahon-funny-walk-1c7fcvyfginlsr5h-861367332.gif',
+    'img/tenor-592391026.gif',
+    'img/giphy-3222771526.gif',
+    'img/C5Mt-1763911963.gif'
   ];
   let currentImg = 0;
 
+  let slideshowInterval = null;
   vinceImg.addEventListener('click', () => {
-    if (vinceImg.style.display === 'none') return; // Don't trigger if hidden
+    if (vinceImg.style.display === 'none') return;
     vinceImg.src = 'img/vince-mc-mahon-entrance-343531421.gif';
-    // Always advance to next image after GIF duration, regardless of audio state
-    setTimeout(() => {
-      vinceImg.src = images[currentImg];
-      currentImg = (currentImg + 1) % images.length;
-    }, gifDuration);
     // Play or pause audio as before
     if (vinceAudio.paused) {
       vinceAudio.currentTime = 0;
@@ -67,6 +81,13 @@
     } else {
       vinceAudio.pause();
       vinceAudio.currentTime = 0;
+    }
+    // Start automatic slideshow
+    if (!slideshowInterval) {
+      slideshowInterval = setInterval(() => {
+        vinceImg.src = images[currentImg];
+        currentImg = (currentImg + 1) % images.length;
+      }, gifDuration);
     }
   });
 
@@ -97,6 +118,18 @@
 
   vinceVideo.addEventListener('ended', () => {
     closeVideoBtn.click();
+  });
+
+  // Statistics popup logic
+  const statsBtn = document.getElementById('statistics-btn');
+  const statsPopup = document.getElementById('stats-popup');
+  const closeStatsBtn = document.getElementById('close-stats-btn');
+
+  statsBtn.addEventListener('click', () => {
+    statsPopup.style.display = 'flex';
+  });
+  closeStatsBtn.addEventListener('click', () => {
+    statsPopup.style.display = 'none';
   });
 </script>
 </html>
